<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b0"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="165dp"
        android:duplicateParentState="false"

        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/beq"
        app:layout_constraintStart_toEndOf="@+id/bdec"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/bdec"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="165dp"
        android:text="@string/dec"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/bplus"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="add"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bclear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/beq"
        app:layout_constraintTop_toBottomOf="@+id/bmin" />

    <Button
        android:id="@+id/bclear"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="96dp"
        android:onClick="clear"
        android:text="@string/c"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bplus" />

    <Button
        android:id="@+id/beq"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="165dp"
        android:onClick="res"
        android:text="@string/eq"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bplus"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/b2"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b0"
        app:layout_constraintEnd_toStartOf="@+id/b3"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b1"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bdec"
        app:layout_constraintEnd_toStartOf="@+id/b2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/bmin"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="sub"
        android:text="@string/min"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bplus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/bmul" />

    <Button
        android:id="@+id/b3"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/beq"
        app:layout_constraintEnd_toStartOf="@+id/bmin"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/b5"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toStartOf="@+id/b6"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/b4"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toStartOf="@+id/b5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7" />

    <Button
        android:id="@+id/bmul"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="mul"
        android:text="@string/mul"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/bdiv" />

    <Button
        android:id="@+id/b6"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toStartOf="@+id/bmul"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="631dp"
        android:gravity="center|center_horizontal"
        android:text="@string/simple_calculator"
        android:textColor="#dcf8c6"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="525dp"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/_0"
        android:textColor="#dcf8c6"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="185dp"
        android:layout_marginRight="185dp"
        android:layout_marginBottom="460dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_number1"
        android:inputType="number"
        android:padding="0dp"
        android:paddingStart="25dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text=""
        android:textColor="#dcf8c6"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRes"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="34dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_number2"
        android:inputType="number"
        android:padding="0dp"
        android:paddingStart="25dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text=""
        android:textColor="#dcf8c6"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/b9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/txtRes" />

    <Button
        android:id="@+id/b7"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b4"
        app:layout_constraintEnd_toStartOf="@+id/b8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/b8"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toStartOf="@+id/b9"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/b9"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b6"
        app:layout_constraintEnd_toStartOf="@+id/bdiv"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/bdiv"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="div"
        android:text="@string/div"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bmul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toBottomOf="@+id/txtRes" />


</androidx.constraintlayout.widget.ConstraintLayout>